--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <hr/>
 
 
-    <img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"height="200"/>
+    <a hreff="../folder3/4.1 webpages/assests/saved pictures/OWO"></a><img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"height="200"/>
     <hr/>
 
 
