--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         <li>CWP</li>
         <li>CSDP</li>
     </ul>
-    <hr/>
-
-
-    <a hreff="../folder3/4.1 webpages/assests/saved pictures/OWO"></a><img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"height="200"/>
+    <img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"height="200"/>
     <hr/>
 
 
