--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Resume</title>
-    <link rel="stylesheet" href"./style.css/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
     <h1>Owolabi Salaudeen</h1>
@@ -54,7 +54,10 @@
         <li>CWP</li>
         <li>CSDP</li>
     </ul>
-    <img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"height="200"/>
+    <hr/>
+
+
+    <a href="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg"><img src="../Folder3/4.1 Webpages/assets/Saved Pictures/OWO.jpg" height="200" </a>
     <hr/>
 
 
